ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Thirdparty_Integration__c/CnP_PaaS__CnP_Thirdparty_Integration__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Thirdparty Integration</label>
    <nameField>
        <label>C&amp;P Thirdparty Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Thirdparty Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>