ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Thirdparty_Integration__c/fields/CnP_PaaS__Matching_Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Matching_Gift_Status__c</fullName>
    <label>Matching Gift Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>