ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Thirdparty_Integration__c/fields/CnP_PaaS__NPSP_Matching_Gift_Integration__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__NPSP_Matching_Gift_Integration__c</fullName>
    <label>NPSP Matching Gift Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>