ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Thirdparty_Integration__c/fields/CnP_PaaS__Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Service_Provider__c</fullName>
    <label>Service Provider</label>
    <length>20</length>
    <type>Text</type>
</CustomField>