ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Thirdparty_Integration__c/fields/CnP_PaaS__Service_Provider_Info__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Service_Provider_Info__c</fullName>
    <label>Service Provider Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>